# Rtype_project

./: .gitignore  CMakeLists.txt  README.md  compile.sh  conanfile.txt  record.sh  script.sh
.github/workflows/: Build.yaml
Client/: Client.hpp  Main.cpp  NetworkModule.hpp
Components/: inputField.hpp  intro.hpp  lobbyPlayer.hpp  net.hpp  networkedObject.hpp  parallax.hpp  pressable.hpp  room.hpp  validationButton.hpp
Engine/Audio/: Audio.hpp
Engine/Builtins/Components/: acceleration.hpp  animatedSpriteRenderer.hpp  boxCollider.hpp  circularShape.hpp  gravity.hpp  input.hpp  orientation.hpp  parallax.hpp  rectangularCollider.hpp  rectangularShape.hpp  spriteRenderer.hpp  text.hpp  transform.hpp  updateTime.hpp  velocity.hpp
Engine/Builtins/Systems/: Collision.hpp  Input.hpp  Movement.hpp  Render.hpp
Engine/Ecs/: dependencies.hpp  entity.hpp  registry.hpp  sparseArray.hpp  system.hpp
Engine/Error/: error.hpp
Engine/Prefabs/UI/: Box.hpp  Button.hpp  Cinematic.hpp  Image.hpp  Text.hpp
Engine/constants/: constansts.hpp
Engine/eventHandler/: eventHandler.hpp
Engine/examples/: how-to.cpp
Engine/scene/: scene.hpp
Modules/: Data.hpp  HuffmanBitset.hpp  Network.hpp  PacketIntegrity.hpp  PacketsHandling.hpp  ThreadPool.hpp  miscellaneous.hpp
Reading/: rfc9999.txt
Scenes/: Game.hpp  Intro.hpp  Menu.hpp
Server/enemies/: basic_enemie.txt  boss_enemie.txt  medium_enemie.txt
Server/include/: CollisionEventManager.hpp  CollisionTrigger.hpp  ControlableManager.hpp  Destructor.hpp  EnemyManager.hpp  ManageInfo.hpp  RtypeServer.hpp  Server.hpp  ThreadPool.hpp  controlable.hpp  dependencies.hpp  drawableType.hpp  infoPacket.hpp  property.hpp  shooter.hpp  shooterManager.hpp
Server/src/: main.cpp
Systems/: FormSystem.hpp  GameUpdateSystem.hpp  PageSwitchSystem.hpp  ParallaxSystem.hpp  introHandler.hpp  onHover.hpp  saveHandleNotif
admin_cli/: ServerAdmin.cpp  ServerAdmin.hpp
